# FlitzServer

./: .clinerules  .coveragerc  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  manage.py  oss-license.py  pyproject.toml  upload-docker-image.sh
.github/workflows/: django-tests.yml
card/: models.py  objdef.py  serializers.py  tasks.py  tests.py  views.py
card/migrations/: 0001_initial.py  0002_initial.py  0003_alter_card_user_alter_usercardasset_type.py  0004_carddistribution_dismissed_at_and_more.py  0005_carddistribution_reveal_phase.py  0006_remove_officialcardasset_object_key_and_more.py  0007_card_gc_ran_at.py  0008_cardfavoriteitem_and_more.py  0009_card_card_card_user_id_523c27_idx_and_more.py  0010_alter_cardflag_reason_and_more.py  0011_carddistribution_distribution_method.py
card/tests/: __init__.py  test_card_distribution_notification.py  test_carddistribution.py
devenv/: docker-compose.yaml
docs/: chronowave.md  messaging.md  moar-notifications.md  wavespot.md
flitz/: apns.py  asgi.py  celery.py  exceptions.py  gpgenc.py  models.py  pagination.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  tasks.py  test_utils.py  thumbgen.py  turnstile.py  urls.py  wsgi.py
flitz-devenv/: docker-compose.yaml
flitz-server-devenv/: docker-compose.yaml
flitz/utils/: aligo_sms.py  mailgun.py  slack.py
location/: chronowave.py  match.py  models.py  serializers.py  tasks.py  views.py
location/migrations/: 0001_initial.py  0002_discoverysession_discoveryhistory.py  0003_discoveryhistory_accuracy_discoveryhistory_altitude_and_more.py  0004_userlocation_timezone.py  0005_alter_userlocation_options_alter_userlocation_user.py  0006_discoveryhistory_location_di_session_7b1e70_idx_and_more.py  0007_userlocation_geohash_and_more.py  (+3 more)
messaging/: consumers.py  models.py  objdef.py  routing.py  serializers.py  thumbgen.py  views.py
notice/: admin.py  models.py  serializers.py  views.py
safety/: models.py  serializers.py  tasks.py  urls.py  views.py
support/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
user/: models.py  objdef.py  registration.py  serializers.py  signals.py  tasks.py  throttling.py  utils.py  views.py
user_auth/: authentication.py  models.py  serializers.py  views.py
wavespot/: apps.py  authentication.py  models.py  serializers.py  views.py
(+73 files in other folders)
