[tool.poetry]
name = "flitzserver"
version = "0.1.0"
description = ""
authors = ["Gyuhwan Park★ <unstabler@unstabler.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
uuid-v7 = "^1.0.0"
djangorestframework = "^3.15.2"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
dacite = "^1.8.1"
django-storages = {extras = ["s3"], version = "^1.14.4"}
pillow = "^11.0.0"
requests = "^2.32.3"
httpx = {extras = ["http2"], version = "^0.28.1"}
celery = {extras = ["msgpack", "redis", "s3"], version = "^5.4.0"}
flower = "^2.0.1"
pytz = "^2024.2"
timezonefinder = "^6.5.8"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
